force-app/main/default/objects/pymts__Payment_Method__c/fields/pymts__Card_Brand__c.field-meta.xml
<CustomField>
    <fullName>pymts__Card_Brand__c</fullName>
    <description>Brand of the credit/debit card</description>
    <label>Card Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Diners Club</fullName>
            </value>
            <value>
                <fullName>JCB</fullName>
            </value>
            <value>
                <fullName>UnionPay</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>