force-app/main/default/objects/pymts__Payment_Method__c/fields/pymts__Expiration_Month__c.field-meta.xml
<CustomField>
    <fullName>pymts__Expiration_Month__c</fullName>
    <description>Expiration month of the card (1-12)</description>
    <label>Expiration Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>