force-app/main/default/objects/pymts__Payment_Method__c/fields/pymts__Expiration_Year__c.field-meta.xml
<CustomField>
    <fullName>pymts__Expiration_Year__c</fullName>
    <description>Expiration year of the card (4 digits)</description>
    <label>Expiration Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>