force-app/main/default/objects/pymts__Payment_Method__c/fields/pymts__Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>pymts__Is_Expired__c</fullName>
    <description>Indicates if the payment method has expired based on expiration month and year</description>
    <formula>IF(
    ISBLANK(pymts__Expiration_Year__c) || ISBLANK(pymts__Expiration_Month__c),
    false,
    OR(
        pymts__Expiration_Year__c &lt; YEAR(TODAY()),
        AND(
            pymts__Expiration_Year__c = YEAR(TODAY()),
            pymts__Expiration_Month__c &lt; MONTH(TODAY())
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>