force-app/main/default/objects/pymts__Payment_Method__c/fields/pymts__Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>pymts__Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is the primary payment method for the account</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>